[project]
name = "aichallenge-clean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.16",
    "dotenv>=0.9.9",
    "neo4j>=5.28.2",
    "numpy>=2.3.2",
    "ollama>=0.5.3",
    "openai>=1.101.0",
    "psutil>=7.0.0",
    "sentence-transformers>=5.1.0",
]
